<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/bgPrimary"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_centerVertical="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/as"
                    android:text="@string/MyselfApp"
                    android:textColor="@color/bg_screen2"
                    android:textSize="24sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/marfi2"
                    android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:elevation="36dp">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp">

                //center text
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="biodata"
                    android:textColor="@color/bg_screen2"
                    android:textSize="20sp"
                    android:fontFamily="@font/as" />
                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/white" />


            // isi bio
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/nim"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp"
                    android:text="@string/namalengkap"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/kelas"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/hobi"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</LinearLayout>